feat(document): add pagination and filtering for document retrieval; enhance search functionality and admin management views